--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -18,8 +18,9 @@
 }
 
 .gpt3__navbar-links_logo img {
-    width: 62.56px;
-    height: 16.02px;
+    width: 80px;
+    height: 60px;
+    object-fit: contain;
 }
 
 .gpt3__navbar-links_container {
