--- a/src/containers/footer/footer.css
+++ b/src/containers/footer/footer.css
@@ -64,9 +64,9 @@
 }
 
 .gpt3__footer-links_logo img {
-    width: 118px;
-    height: 30px;
-
+    width: 100px;
+    height: 80px;
+    object-fit: contain;
     margin-bottom: 1rem;
 }
 
